third_party/move/tools/move-decompiler/tests/compiler-v2-test/checking-lang-v2.2/lambda/inline-parity/same_names.exp
module 0x42::a {
    struct MyList has drop {
        len: u64,
    }
    public fun len(self: &MyList): u64 {
        *&self.len
    }
}

module 0x42::b {
    struct MyOtherList has drop {
        len: u64,
    }
    public fun len(self: &MyOtherList): u64 {
        *&self.len
    }
}

module 0x42::c {
    use 0x42::a;
    use 0x42::b;
    fun foo(f: |(a::MyList, b::MyOtherList)|, x: a::MyList, y: b::MyOtherList) {
        f(x, y);
    }
    fun test(x: a::MyList, y: b::MyOtherList) {
        foo(|(arg0,arg1)| __lambda__1__test(arg0, arg1), x, y);
    }
    fun __lambda__1__test(x: a::MyList, y: b::MyOtherList) {
        if (!(a::len(&x) + b::len(&y) == 1)) abort 1;
    }
}

--- unable to recompile the decompiled code:
exiting with context checking errors
error: unexpected token
   ┌─ same_names.move:26:14
   │
26 │         foo(|(arg0,arg1)| __lambda__1__test(arg0, arg1), x, y);
   │              ^
   │              │
   │              Unexpected '('
   │              Expected a variable or struct or variant name
